<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    <ImageView android:id="@+id/novel_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon"
            android:layout_marginTop="15dp"
            />
    <TextView android:id="@+id/novel_name"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/need_you"
            	android:textSize="18dp"
            	android:textStyle="bold"
            	android:layout_marginTop="15dp"
                />
    <TextView  android:id="@+id/novel_author"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/notice_no_ad"
            	android:textColor="#f00"
            	android:layout_marginTop="5dp"
                />
   	<TextView  android:id="@+id/novel_author"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/donate_des"
            	android:layout_marginTop="5dp"
            	android:layout_marginRight="5dp"
            	android:layout_marginLeft="5dp"
                />
   	<Button android:id="@+id/donate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:text="@string/donate_app"
            android:textSize="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            />
   	<Button android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:text="@string/verify_buy"
            android:textSize="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            />

</LinearLayout>
