<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:id="@+id/layout_progress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        >
        <ProgressBar 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	/>        
    </LinearLayout>
    
    <com.taiwan.imageload.LoadMoreGridView
        android:id="@+id/news_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#FFFFFF"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp"
        android:horizontalSpacing="2dp"
        android:background="@color/main_color_grey_dark"
        />
    
    <LinearLayout 
   	 	android:id="@+id/load_more_grid"
   	 	android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content"
     	android:background="#FFFFFF"
     	android:gravity="center"
     	android:layout_weight="0"
     	>

	    <TextView 
	        android:layout_width="wrap_content"
   	 		android:layout_height="wrap_content"
   	 		android:text="@string/toast_novel_downloading"
	        />
	    <ProgressBar
	        android:id="@+id/load_more_progressBar"
	        android:layout_width="36dp"
	        android:layout_height="36dp"
	        android:layout_centerInParent="true"
	        android:indeterminate="true"
	        android:indeterminateDrawable="@drawable/costum_progress_bar"
	        android:padding="3dp"
	        android:visibility="visible"
	        />
	</LinearLayout>
	
    <LinearLayout 
   	 	android:id="@+id/layout_no_data"
   	 	android:layout_width="fill_parent"
   	 	android:layout_height="fill_parent"
     	android:gravity="center"
     	android:visibility="gone"
     	android:background="@color/main_color_grey_dark"
     	>
	    <ImageView 
	       android:layout_width="80dp"
   	 	   android:layout_height="80dp"
   	 	   android:src="@drawable/app_icon_black" 
	        />
	    <TextView 
	        android:layout_width="wrap_content"
   	 		android:layout_height="wrap_content"
   	 		android:text="@string/no_data"
   	 		android:textSize="23dp"
   	 		android:layout_marginLeft="5dp"
   	 		android:textColor="#6E6E6E"
	        />
	</LinearLayout>
	
    <LinearLayout 
   	 	android:id="@+id/layout_reload"
   	 	android:layout_width="fill_parent"
   	 	android:layout_height="fill_parent"
     	android:gravity="center"
     	android:visibility="gone"
     	android:background="@color/main_color_grey_dark"
     	>
	    <TextView 
	        android:layout_width="wrap_content"
   	 		android:layout_height="wrap_content"
   	 		android:text="@string/no_internet"
   	 		android:textSize="23dp"
   	 		android:layout_marginLeft="5dp"
   	 		android:textColor="#6E6E6E"
	        />
	    <Button  android:id="@+id/button_reload"
	       android:layout_width="wrap_content"
   	 	   android:layout_height="wrap_content"
   	 	   android:layout_marginLeft="5dp"
   	 	   android:text="@string/try_again"
	        />
	</LinearLayout>

</LinearLayout>