<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/recommend_dialog" >
    
    
    <LinearLayout 
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
                android:layout_marginLeft="5dp"
        		        
        	        >
        	            <TextView
        	              android:id="@+id/author_tip"
        	              android:layout_width="wrap_content"
        	              android:layout_height="wrap_content"
        	              android:text="@string/report_novel"
        	           	  android:textSize="15dp" 
        	              android:textColor="#999999"
        	              android:typeface="serif"
        	              >
        	            </TextView>
        	            <EditText
                        android:id="@+id/novel_name"        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        </EditText>
    </LinearLayout>
    <LinearLayout 
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
                android:layout_marginLeft="5dp"
        		        
        	        >
        	            <TextView
        	              android:id="@+id/author_tip"
        	              android:layout_width="wrap_content"
        	              android:layout_height="wrap_content"
        	              android:text="@string/report_chapter"
        	           	  android:textSize="15dp" 
        	              android:textColor="#999999"
        	              android:typeface="serif"
        	              >
        	            </TextView>
        	            <EditText
                        android:id="@+id/article_name"        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        </EditText>
    </LinearLayout>
    <LinearLayout 
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
                android:layout_marginLeft="5dp"
        		        
        	        >
        	            <TextView
        	              android:id="@+id/author_tip"
        	              android:layout_width="wrap_content"
        	              android:layout_height="wrap_content"
        	              android:text="@string/report_content"
        	           	  android:textSize="15dp" 
        	              android:textColor="#999999"
        	              android:typeface="serif"
        	              >
        	            </TextView>
        	            <EditText
                        android:id="@+id/problem"        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/report_problem_hint"
                        >
                        </EditText>
    </LinearLayout>
    
    

</LinearLayout>
