<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="1dp" 
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/grid_selector"
    >
 
    <ImageView
        android:id="@+id/grid_item_image"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginRight="20px"
        android:layout_marginLeft="10px"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"
        android:src="@drawable/app_icon_black" >
    </ImageView>
 
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        android:gravity="center_vertical"
        >
	    <TextView
	        android:id="@+id/grid_item_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="天龍八部"
              android:layout_marginBottom="2px"
	        android:textSize="30px" 
              android:textStyle="bold"
              android:typeface="serif"/>
	   
        <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10px"
        >
            <TextView
              android:id="@+id/author_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novel_author"
            android:textSize="23px" 
              android:textColor="#999999"
              android:typeface="serif">
            </TextView>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_toRightOf="@+id/author_tip">
            <TextView
            android:id="@+id/grid_item_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2px"
            android:text="金庸"
            android:textSize="20px" 
            android:textColor="#555555"
            android:typeface="serif">
            </TextView>
            </RelativeLayout>
        </RelativeLayout>
	  
         <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10px"
        >
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_num"
            android:textSize="23px" 
              android:textColor="#999999"
              android:typeface="serif">
            </TextView>
	    <TextView
	        android:id="@+id/grid_item_counts"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="74"
	        android:layout_alignParentRight="true"
	        android:textSize="20px" 
              android:textColor="#555555"
              android:typeface="serif"
              android:layout_marginTop="2px">
	    </TextView>
        </RelativeLayout>
        <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10px"
        >
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_time"
            android:textSize="23px" 
              android:textColor="#999999"
              android:typeface="serif">
            </TextView>
	    <TextView
	        android:id="@+id/grid_item_finish"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="13-02-13"
	        android:layout_alignParentRight="true"
	        android:textSize="20px" 
              android:textColor="#555555"
              android:typeface="serif"
              android:layout_marginTop="2px">
	    </TextView>
        </RelativeLayout>
        <TextView
            android:id="@+id/serializing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serializing"
            android:layout_alignParentRight="true"
            android:textSize="20px" 
              android:textColor="#FF3333"
              android:typeface="serif"
              android:layout_marginTop="3px">
        </TextView>
    </LinearLayout>
 
</LinearLayout>